--- a/accounts/templates/accounts/accountant_dashboard.html
+++ b/accounts/templates/accounts/accountant_dashboard.html
@@ -599,7 +599,7 @@
     </div>
 {% endblock %}
 {% block extra_js %}
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'users/vendor/chart.js/chart.min.js' %}"></script>
     <script>
     // Revenue Line Chart
     const revCtx = document.getElementById('revenueChart').getContext('2d');
