--- a/home/templates/home/ambulance_dashboard.html
+++ b/home/templates/home/ambulance_dashboard.html
@@ -330,7 +330,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'users/vendor/chart.js/chart.min.js' %}"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function () {
         const ctx = document.getElementById('ambulanceChart').getContext('2d');
