--- a/inpatient/templates/inpatient/dashboard.html
+++ b/inpatient/templates/inpatient/dashboard.html
@@ -196,7 +196,7 @@
         </div>
     </div>
     {% block extra_js %}
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="{% static 'users/vendor/chart.js/chart.min.js' %}"></script>
         <script>
     document.addEventListener('DOMContentLoaded', function () {
         const ctx = document.getElementById('occupancyChart')?.getContext('2d');
