--- a/inpatient/templates/inpatient/patient_case_folder.html
+++ b/inpatient/templates/inpatient/patient_case_folder.html
@@ -15,7 +15,9 @@
             <div class="relative z-10 flex flex-col lg:flex-row justify-between items-start lg:items-center gap-8">
                 <div class="flex items-center gap-6">
                     <div class="relative">
-                        <img src="https://ui-avatars.com/api/?name={{ admission.patient.full_name|urlencode }}&background=6366f1&color=fff&size=120" class="w-24 h-24 rounded-3xl shadow-xl ring-4 ring-white object-cover">
+                        <div class="w-24 h-24 rounded-3xl shadow-xl ring-4 ring-white bg-indigo-600 flex items-center justify-center text-white text-3xl font-black">
+                            {{ admission.patient.first_name|first|upper }}{{ admission.patient.last_name|first|upper }}
+                        </div>
                         <div class="absolute -bottom-2 -right-2 w-8 h-8 rounded-xl bg-emerald-500 border-4 border-white flex items-center justify-center text-white text-xs shadow-lg" title="Active Admission">
                             <i class="fas fa-check"></i>
                         </div>
@@ -1015,7 +1017,7 @@
 {% block extra_js %}
     {{ vitals_data|default:"{}"|json_script:"vitals-data" }}
     {{ medical_tests_data|default:"[]"|json_script:"services-data" }}
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'users/vendor/chart.js/chart.min.js' %}"></script>
     <script>
     function showModal(id) {
         const modal = document.getElementById(id);
