--- a/maternity/templates/maternity/pnc_dashboard.html
+++ b/maternity/templates/maternity/pnc_dashboard.html
@@ -463,7 +463,7 @@
         </div>
     </div>
     <!-- Chart.js and Custom Logic -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'users/vendor/chart.js/chart.min.js' %}"></script>
     <script>
     function showTab(tabId, event) {
         // Log containers
